MGNLUI-100: fixed alignment of column headers MGNLUI-1165: grouped icons with their values

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/table.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/table.scss
@@ -84,7 +84,11 @@
 }
 
 .v-magnolia-table .v-table-header td:first-child span {
-	padding-left: 30px;
+	padding-left: 25px;
+}
+
+.v-treetable .v-table-header td:first-child span {
+    padding-left: 43px;
 }
 
 .v-magnolia-table .v-select-all {
@@ -108,6 +112,7 @@
 
 .v-magnolia-table .v-selection-cb {
     margin-left:1px;
+    margin-right: 10px;
 }
 
 .v-magnolia-table .v-table-row:hover,
@@ -124,14 +129,15 @@
   color: #999999;
   font-size: 20px;
   text-align: right;
+  width: 20px;
 }
 .tablet .v-magnolia-table .v-treetable-treespacer {
   font-size: 28px;
 }
 
 .v-table-icon-element {
-    margin-left:2px;
-    margin-right:7px;
+    margin-left:0px;
+    margin-right:4px;
     font-size:19px;
     vertical-align:middle;
 }
